css/home.css
*{
    margin: 0;
    padding: 0;
    
}
body{
    overflow-x: hidden  !important;
}
/* ===== Scrollbar CSS ===== */
  /* Firefox */
  * {
    scrollbar-width: auto;
    scrollbar-color: #e4177c #ffffff;
  }

  /* Chrome, Edge, and Safari */
  *::-webkit-scrollbar {
    width: 10px;
    transition: width 0.1s ease-in-out;
  }

  *::-webkit-scrollbar-track {
    background: #ffffff;
  }

  *::-webkit-scrollbar-thumb {
    background-color: #e4177c;
    border-radius: 50px;
    border: 2px solid #ffffff;
  }
  /* --------------- */
.logo{
    height: 5.5rem;
}
.header-bg{
    background: linear-gradient(
            199.29deg,
            #7ed0ff -8.84%,
            #e4177c 142.72%
          );
}
.header{
    height: 100vh;    
}
.header-img{
    background-image: linear-gradient( #e4177d69, rgba(0, 0, 0, 0.34) ), url(../asserts/pexels-ankur-kumar-3872614.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
 
}
/* header */
/* register */

.register-div{
position: relative;
z-index: 10 !important;
margin-top: -5rem;
/* width: auto; */
}
.register-div input:focus{
    border: 2.5px #e4177c solid ;
    /* border-color: #e4177c; */
    box-shadow: none;

}
.register-div select:focus{
    border: 2.5px #e4177c solid ;
    /* border-color: #e4177c; */
    box-shadow: none;
}
/* register */
/* features */
.features img{
    height: 4rem !important;
}

/* features */
/* instruction */
/* .instruction{
    height: 5rem;
} */
.instruction img{
    height: 4rem;
    background-color:white;
    margin-top: -3rem;
}
/* instruction */
/* story */
.story{
background: linear-gradient( rgba(255, 255, 255, 0.923), rgba(255, 255, 255, 0.923) ), url('../asserts/Untitled-1.png');
background-position: center center;
background-size: cover;
background-repeat: no-repeat;
overflow: hidden;
max-width: 100%;
}

.story-img{
/* background-color: aqua; */
width: 25rem;
height: 33rem;
margin-top: 3rem;
margin-bottom: 3rem;
overflow: hidden; 
}
.story-img img{
    background-position: center center;
    background-size: cover;   
    background-repeat: no-repeat;
    max-height: 100%;
    margin-left: -13rem;
}
/* story */
/* testimonal */

.card{
    height: 23rem;
    width: 19rem !important;
    margin-left: 2rem !important;
    display: inline-block;
}
.testm-message{
    font-size: 1rem !important;
}
.card-img{
    height: 50%;width: 100%;
}
.card-img img{
    width: 100%; max-height: 100%; object-fit: cover;
}
.card-names{
    margin-top: -1.2rem;
}
.owl-item > div {
    cursor: pointer;
    margin: 6% 8%;
    transition: margin 0.4s ease;
  }
  .owl-item.center > div {
    cursor: auto;
    margin: 0;
  }
  .owl-item:not(.center) > div:hover {
    opacity: .75;
    transition: all 0.4s ease-in-out;
  }
  .owl-carousel .nav-btn{
    height: 47px;
    position: absolute;
    width: 26px;
    cursor: pointer;
    top: 100px !important;
}


/* testimonal */

/* activement */
.activement img{
    height: 5rem !important;
}
/* quick search */
.age{
    height: 2.8rem;
}
.qsearch:focus,.age:focus{
    border: 2.5px #e4177c solid !important;
    outline: none;
}
.age::-webkit-inner-spin-button{ 
  -webkit-appearance: none !important; 
  margin: 0 !important; 
}

.qsearch-btn:hover ,.qsearch-btn:focus{
    background-color:#e4177c !important;
    outline: none;
}
/* quick search */
/* bg-city */
.bg-city img{
    max-width: 100%;
}
/* suscribe */
.susemail:focus{
    outline: none;
    border: 2.5px #e4177c solid !important;
    box-shadow: none;
    border-right: 0 !important;
}
/* footer */
.links a{
    text-decoration: none;
    color: white;
}
.links a:hover{
/* color: #ffb5d9 !important; */
color: #e4177c !important;

}
.links{
    line-height: 2.5rem;
}
.follow-btn{
    font-size: 2rem;
}
.follow-btn i:hover{
    color: #ffb5d9 !important;
}


/* ============================================= */
/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 600px) {
    .logo{
        height: 4rem;
    }
.header-bg{
    background-image: linear-gradient( rgba(0, 0, 0, 0.34),#e4177d9a ), url(../asserts/pexels-ankur-kumar-3872614.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
}
.header{
    height:75vh ;
}
.header-text{
    font-size: 1.8rem;
    padding-top: 6rem;
}
/* ---------------------------- */
.register-btn{
    border-bottom-left-radius: 1rem;
    border-bottom-right-radius: 1rem;
}
/* -------------------------------- */
.features img{
    height: 3rem !important;
}
.owl-carousel .owl-item {
    text-align:center;
}
.owl-carousel .item {
    float: none;
    display: inline-block;
}
}

/* Small devices (portrait tablets and large phones, 600px and up) */
@media only screen and (min-width: 600px) {
    .register-btn{
        border-bottom-left-radius: 1rem;
        border-bottom-right-radius: 1rem;
    }
    /* ----------------- */
    .features img{
        height: 3rem !important;
    }
    .features p{
        font-size: 1rem !important;
    }
    /* --------------- */
    .story-img img{
        margin-left: -18rem !important;
    }
    .age{
        width: 4.5rem !important;
    }
}

/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {

}

/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 992px) {
    .register-btn{
        border-top-right-radius: 1rem;
        border-bottom-right-radius: 1rem;
        border-bottom-left-radius: 0;
    }
     .right-border{
        border-right: 3px #7ed0ff solid;
    }
    .story-img img{
        margin-left: -13rem !important;
    }
}

/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 1200px) {
   
   
}

